--- a/styles/banner.css
+++ b/styles/banner.css
@@ -31,7 +31,8 @@
     text-align: center;
     color: var(--cor-azul-degrade);
     background: url("../imagens/lupa.svg") no-repeat;
-    background-position: 1em;
+    background-position: 0em;
+    padding: 0 2em;
 }
 
 @media screen and (min-width: 1024px) {
