--- a/styles/header.css
+++ b/styles/header.css
@@ -155,5 +155,9 @@
     .manu{
         margin-right: 20%;         
     }
+    
+    .cabecalho__menu-hamburguer{
+        display: none;
+    }
 
 }
